--- a/tex/2018.tex
+++ b/tex/2018.tex
@@ -1,4 +1,4 @@
 \Year{\currfilebase}
 % \input{\currfiledir\currfilebase/1}
-% \input{\currfiledir\currfilebase/2}
+\input{\currfiledir\currfilebase/2}
 \input{\currfiledir\currfilebase/3}
